--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Everyone was happy but the new base got found again by VolVOLT, we decided to as
 
 
 
-
+<pre>
 CREDIT:
 lead designer: Qylie
 manager: Qylie
@@ -45,6 +45,7 @@ bug reporter: Qylie
 manager of advertising section: Qylie
 manager: Qylie
 slave worker: Qylie
+</pre>
 </a>
 </div>
 </center>
