--- a/mem.html
+++ b/mem.html
@@ -30,6 +30,8 @@
 <img src= "heads/zvoln.png" style="float: center ;width:250px; height: 200px;">
 <header> Adri7696 </header>
 <img src= "heads/adri.png" style="float: center ;width:250px; height: 200px;">
+<header> _leo2 </header>
+<img src="heads/leo.png" style="float: center ;width:250px; height; 210px;">
 </center>
 </div>
 </body>
