--- a/mem.html
+++ b/mem.html
@@ -9,6 +9,7 @@
 <div class="topnav">
   <a href="mem.html">Members</a>
   <a href="index.html">History Of TheGoatsCrew</a>
+  <a href="pic.html">Pictures</a>
  </div>
 <div>
 <center>
