--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ bug reporter: Qylie
 manager of advertising section: Qylie
 manager: Qylie
 slave worker: Qylie
+cool server: eupvp.net /website https://eupvp.tebex.io/
 </a>
 </div>
 </center>
