--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@ came from, it was only on the box server, so we got on donut made there the GC. 
 a whole war about that. But we need to find a safe place. Pro found a place under the old spawn and teleported error in there, so the base began to grow
 big. At the middle of it we decided to create the GC on the prac server but we hadnt made crystals yet. So when error first found out that pro can make cool looking crystals error
 came to the idea that we make THEGOATSCREW crystals and pro liked that idea, so he did and the days kept going until we made more versions and dropped them to more players. 
-Everyone was happy but the new base got found again by VolVOLT, we decided to ask HaleyKopter for help wich she accepted and teleported us into an Admin Warp World so we began build our biggest Base there, and TCW kept growing because Qylie and Qeuy joined us there too. Then we dropped more crystals and it kept going until we reached 30members wich is the newest point of TGC we have. Everyone is happy and some are on vacation. TGC will keep growing bigger and bigger till the end of EUPVP
+Everyone was happy but the new base got found again by VolVOLT, we decided to ask HaleyKopter for help wich she accepted and teleported us into an Admin Warp World so we began build
+our biggest Base there, and TCW kept growing because Qylie and Qeuy joined us there too. Then we dropped more crystals and it kept going until we reached 30members wich is 
+the newest point of T
+GC we have. Everyone is happy and some are on vacation. TGC will keep growing bigger and bigger till the end of EUPVP
+</pre>
+</center>
 
 
-
-
-
-
+<div>
+<pre>
 CREDIT:
 lead designer: Qylie
 manager: Qylie
@@ -46,11 +49,10 @@ bug reporter: Qylie
 manager of advertising section: Qylie
 manager: Qylie
 slave worker: Qylie
-cool server: eupvp.net /website https://eupvp.tebex.io/
-
+cool minecraft server: eupvp.net  <a href="https://eupvp.tebex.io/"> eupvp website </a>
+</div>
 </a>
 </pre>
 </div>
-</center>
 </body>
 </html>
