--- a/mem.html
+++ b/mem.html
@@ -19,6 +19,8 @@
 <img src= "heads/qylie.png" style="float: center ;width:240px; height: 200px;">
 <header> Wantedt</header>
 <img src= "heads/wantedt.png" style="float: center ;width:240px; height: 200px;">
+<header> Qeuy </header>
+<img src= "heads/qeuy.png" style="float: center ;width:240px; height: 200px;">
 <header> WInowsXP </header>
 <img src= "heads/wino.png" style="float: center ;width:240px; height: 200px;">
 <header> ErrorEnte404 </header>
@@ -29,8 +31,10 @@
 <img src= "heads/zvoln.png" style="float: center ;width:250px; height: 200px;">
 <header> Adri7696 </header>
 <img src= "heads/adri.png" style="float: center ;width:250px; height: 200px;">
-<header> Rankmaker </header>
+<header> RankMaker </header>
 <img src="heads/rank.png" style="float: center ;width:250px; height; 210px;">
+<header> TheMxnkey </header>
+<img src="heads/mxnkey.png" style="float: center ;width:250px; height; 210px;">
 </center>
 </div>
 </body>
