--- a/mem.html
+++ b/mem.html
@@ -27,12 +27,14 @@
 <img src= "heads/phantom.png" style="float: center ;width:250px; height: 200px;">
 <header> zVoln </header>
 <img src= "heads/zvoln.png" style="float: center ;width:250px; height: 200px;">
-<header> Adri7696 </header>
-<img src= "heads/adri.png" style="float: center ;width:250px; height: 200px;">
 <header> RankMaker </header>
 <img src="heads/rank.png" style="float: center ;width:250px; height; 210px;">
 <header> TheMxnkey </header>
 <img src="heads/mxnkey.png" style="float: center ;width:250px; height; 210px;">
+<header> Electroon </header>
+<img src="heads/electroon.png" style="float: center ;width:250px; height: 200px;">
+<header> Ad3i </header>
+<img src="heads/ad3i.png" style="float: center; width: 200px; height: 200px;"
 </center>
 </div>
 </body>
